# zapnote

./: AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
resources/: default-sb.toml  default-zapnote.toml
src/: cli.rs  config.rs  journal.rs  main.rs  note.rs
src/errors/: config.rs
src/utils/: casing.rs  date.rs  mod.rs  placeholder.rs  template.rs
tests/: cli.rs
