[package]
name = "zapnote"
version = "0.2.0"
edition = "2021"
description = "Lightning-fast template-based note generator"
license = "MIT"
authors = ["Lucas Martins Vieira <lucasmartvieira03@outlook.com>"]
repository = "https://github.com/LucasMartinsVieira/zapnote"
rust-version = "1.74.1"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
directories = "5.0.1"
nix = { version = "0.29.0", features = ["process"] }
regex = "1.11.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"

[[bin]]
name = "zn"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.12.0"
